test/tests/stages/8_loops/invalid_semantics/extra_credit/duplicate_variable_in_switch.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[38]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(1)
  ;
  switch
  (
  identifier(a)
  )
  {
  int
  identifier(b)
  =
  const int(2)
  ;
  case
  const int(0)
  :
  identifier(a)
  =
  const int(3)
  ;
  int
  identifier(b)
  =
  const int(2)
  ;
  }
  return
  const int(0)
  ;
  }
